canary-deploy-isito/canary-manifests/strict-mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: webapps
spec:
  mtls:
    mode: STRICT
